# rbh-find

./: README.rst  meson.build  project.config  rbh-find.c  rbh-find.spec.in
doc/adr/: xattrs.rst
include/: filters.h  meson.build  parser.h  rbh-find.h  utils.h
include/rbh-find/: backend.h  core.h  filters.h  find_cb.h  meson.build  utils.h
src/: actions.c  backend.c  core.c  filters.c  find_cb.c  meson.build  parser.c  utils.c
tests/: meson.build  test_perm.bash  test_perm.sh  test_size.bash  test_time.bash  test_utils.bash  test_xattr.bash
utils/: add_specfile_to_dist.sh  make_rpm.sh
